--- a/app.css
+++ b/app.css
@@ -92,7 +92,7 @@ h1#game-title{
     top: 0px;
     z-index: 1;
     height: 70px;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.4);
     background: none;
     border-radius: 5px;
     transition-duration: .4s;
@@ -349,14 +349,15 @@ h1#game-title{
         padding: 6px 6px;
     }
     .char-block{
-        width: 40px;
-        height: 40px;
+        width: 45px;
+        height: 45px;
         margin-right: 10px;
+        font-size: 24px;
     }
     .key{
         width: 33px;
         height: 50px;
-        font-size: 13px;
+        font-size: 14px;
         border: 1px solid #1c1c27;
     }
     .key:hover{
@@ -364,7 +365,7 @@ h1#game-title{
     }
     #enter, #backspace{
         width: 66px;
-        font-size: 9px;
+        font-size: 9.5px;
     }
     
     .char-block.correct-pos::before, .char-block.correct-char::before{
@@ -375,7 +376,8 @@ h1#game-title{
     }
     
     .curr-line{
-        height: 52px;
+        height: 57px;
+        border-radius: 10px;
     }
     #game-tip{
         width: 120px;
