--- a/app.css
+++ b/app.css
@@ -22,8 +22,82 @@ body{
     justify-content: space-between;
     align-items: center;
     transform: translateX(-50%);
-/*    padding: 100px 0px 25px 0px; */
-    padding: 25px;
+    padding: 50px;
+    padding-top: 75px
+}
+
+h2{
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+#how-to, #stats{
+    position: fixed;
+    z-index: 99;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    padding: 100px 50px;
+    color: white;
+    background: #1c1c27;
+    font-weight: 200;
+    line-height: 24px;
+    display: none;
+}
+
+#how-to > p, #stats > p{
+    margin-bottom: 24px;
+    max-width: 420px;
+}
+p span.underline{
+    text-decoration: underline;
+}
+#best-results{
+    margin-bottom: 32px;
+}
+#your-stats{
+    display: flex;
+    flex-direction: column;
+}
+.stats-headers{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 14px;
+}
+.stats-headers > div:nth-of-type(1){
+    flex: 6;
+}
+.stats-headers > div:nth-of-type(2){
+    width: 60px;
+}
+.stats-headers > div:nth-of-type(3){
+    width: 100px;
+}
+
+.stat-item{
+    font-size: 16px;
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 0px;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+.stat-item:last-of-type{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.stat-item span{
+    font-weight: 200;
+}
+.stat-item > span:nth-of-type(1){
+    flex: 6;
+}
+.stat-item > span:nth-of-type(2){
+   width: 60px;
+}
+.stat-item > span:nth-of-type(3){
+   width: 100px;
 }
 
 h1#game-title{
@@ -273,6 +347,7 @@ h1#game-title{
     width: 100%;
     padding: 12px;
     position: absolute;
+    z-index: 9999;
     top: 0px;
     display: flex;
     justify-content: space-between;
@@ -282,7 +357,7 @@ h1#game-title{
     outline: none;
     border: none;
     color: #ebeaef;
-    width: 100px;
+    width: 50px;
     height: 50px;
     cursor: pointer;
     background: none;
@@ -295,11 +370,11 @@ h1#game-title{
 }
 
 #how-to-btn{
-    background-image: url(how-to.svg);
+    background-image: url(graphics/how-to.svg);
 }
 #stats-btn{
     background-size: 28px;
-    background-image: url(stats.svg);
+    background-image: url(graphics/stats.svg);
 }
 .nav-btn:hover{
     border: 1px solid white;
@@ -318,10 +393,10 @@ h1#game-title{
     background: #ebeaef;
     color: #1c1c27;
     width: 150px;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 16px;
     padding: 10px;
-    font-weight: 500;
+    font-weight: 400;
     text-align: center;
     border-radius: 5px;
     transform: translateY(10px) translateX(-50%);
@@ -342,8 +417,23 @@ h1#game-title{
 
     .wrapper{
         padding: 10px;
-        padding-top: 50px;
+        padding-top: 85px;
 /*        height: calc(100vh - 100px);*/
+    }
+    
+    #how-to > p, #stats > p{
+        margin-bottom: 18px;
+        font-size: 14px;
+        line-height: 22px;
+    }
+    
+    .stat-item{
+        font-size: 14px;
+    }
+    
+    #how-to, #stats{
+        padding: 18px;
+        padding-top: 85px;
     }
     .char-line{
         padding: 6px 6px;
@@ -361,11 +451,11 @@ h1#game-title{
         border: 1px solid #1c1c27;
     }
     .key:hover{
-        background: #2a2d33;
+        background: #1c1c27;
     }
     #enter, #backspace{
         width: 66px;
-        font-size: 9.5px;
+        font-size: 13px;
     }
     
     .char-block.correct-pos::before, .char-block.correct-char::before{
@@ -381,8 +471,11 @@ h1#game-title{
     }
     #game-tip{
         width: 120px;
-        font-size: 10px;
+        font-size: 11px;
         line-height: 14px;
         padding: 7px;
+    }
+    .nav-btn:hover{
+        border: none;
     }
 }
